Personel ekleme View

--- a/HR_Project/HR_Project.Presentation/Views/Account/Register.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Account/Register.cshtml
@@ -1,4 +1,6 @@
-﻿@using HR_Project.Common.Models.DTOs;
+﻿@using HR_Project.Common.Extensions;
+@using HR_Project.Common.Models.DTOs;
+@using HR_Project.Domain.Enum;
 @model RegisterDTO
 
 @{
@@ -52,10 +54,10 @@
                                     <form class="user" asp-action="Register" method="post" enctype="multipart/form-data">
                                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                         <div class="form-group">
-                                            <label asp-for="UploadImage" class="control-label"></label>
-                                            <input asp-for="UploadImage" type="file" class="form-control" accept="image/*" />
+                                            <input asp-for="UploadImage" type="file" class="form-control form-control-user" accept="image/*" />
                                             <span asp-validation-for="UploadImage" class="text-danger"></span>
                                         </div>
+
                                         <div class="form-group" data-validate="Name">
                                             <input type="text" class="form-control form-control-user" name="Name"
                                                    id="exampleInputName" aria-describedby="NameHelp"
@@ -73,7 +75,7 @@
                                                    id="exampleInputEmail" aria-describedby="emailHelp"
                                                    placeholder="Email...">
                                         </div>
-                                        <div class="form-group" data-validate="UserName">
+                                        <div class="form-group" data-validate="UserName" >
                                             <input type="text" class="form-control form-control-user" name="UserName"
                                                    id="exampleInputUserName" aria-describedby="UserNameHelp">
                                         </div>
@@ -90,47 +92,51 @@
                                                    placeholder="Telefon Numarası...">
                                         </div>
 
-                                        <div class="form-group" data-validate="CityId">
-                                            <input type="text" class="form-control form-control-user" name="CityId"
-                                                   id="exampleInputCityId" aria-describedby="CityIdHelp"
-                                                   placeholder="İl...">
+                                        <div class="form-group">
+                                            <select asp-for="CityId" id="CityId" asp-items="Model.CityList" class="form-control form-select-sm">
+                                                <option value="" >Şehir seçiniz</option>
+                                            </select>
+                                            <span asp-validation-for="CityId" class="text-danger"></span>
                                         </div>
 
-                                        <div class="form-group" data-validate="RegionId">
-                                            <input type="text" class="form-control form-control-user" name="RegionId"
-                                                   id="exampleInputRegionId" aria-describedby="RegionIdHelp"
-                                                   placeholder="İlçe...">
+                                        <div class="form-group">
+                                            <select asp-for="RegionId" id="RegionId" asp-items="Model.Regions" class="form-control form-select-sm">
+                                                <option value="" >İlçe seçiniz</option>
+                                            </select>
+                                            <span asp-validation-for="RegionId" class="text-danger"></span>
                                         </div>
-
-                                        <div class="form-group" data-validate="BloodType">
-                                            <input type="text" class="form-control form-control-user" name="BloodType"
-                                                   id="exampleInputBloodType" aria-describedby="BloodTypeHelp"
-                                                   placeholder="Kan Grubu...">
+                                        <div class="form-group">
+                                            <select class="form-control form-select-sm" asp-for="BloodType" asp-items="EnumHelper.GetEnumSelectList<BloodType>()">
+                                                <option value="-1">Kan Grubunuzu Giriniz</option>
+                                            </select>
+                                            <span asp-validation-for="BloodType" class="text-danger"></span>
                                         </div>
-
-                                        <div class="form-group" data-validate="Gender">
-                                            <input type="text" class="form-control form-control-user" name="Gender"
-                                                   id="exampleInputGender" aria-describedby="GenderHelp"
-                                                   placeholder="Cinsiyet...">
+                                        
+                                        <div class ="form-group">
+                                            <select class="form-control form-select-sm" asp-for="Gender" asp-items="EnumHelper.GetEnumSelectList<Gender>()">
+                                                <option value="-1">Cinsiyet Giriniz</option>
+                                            </select>
+                                            <span asp-validation-for="Gender" class="text-danger"></span>
                                         </div>
-                                        <div class="form-group" data-validate="Nation">
-                                            <input type="text" class="form-control form-control-user" name="Nation"
-                                                   id="exampleInputNation" aria-describedby="NationHelp"
-                                                   placeholder="Uyruk...">
+ 
+                                        
+                                        <div class="form-group">
+                                            <select class="form-control form-select-sm" placeholder="Uyruk..." asp-for="Nation" asp-items="EnumHelper.GetEnumSelectList<Nation>()">
+                                                <option value="-1">Uyruk Giriniz</option>
+                                            </select>
+                                            <span asp-validation-for="Nation" class="text-danger"></span>
                                         </div>
 
                                         <div class="form-group" data-validate="BirthDate">
                                             <input type="date" class="form-control form-control-user" name="BirthDate"
                                                    id="exampleInputBirthDate" aria-describedby="BirthDateHelp"
-                                                   placeholder="Doğum Tarihi...">
+                                                   placeholder="Doğum Tarihi ...">
                                         </div>
-
                                         <div class="form-group" data-validate="HireDate">
                                             <input type="date" class="form-control form-control-user" name="HireDate"
-                                                   id="exampleInputHireDate" aria-describedby="BirthDateHelp"
+                                                   id="exampleInputHireDate" aria-describedby="HireDateHelp"
                                                    placeholder="İşe Giriş Tarihi...">
                                         </div>
-
                                         <div class="form-group" data-validate="Password">
                                             <input type="password" class="form-control form-control-user" name="Password"
                                                    id="exampleInputPassword" placeholder="Şifre">
