--- a/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
@@ -96,7 +96,7 @@
                                         @item.Amount 
                                     </td>
                                     <td>
-                                        @item.Currency
+                                        @item.Currency.GetDisplayName()
                                     </td>
                                     <td>
                                         @item.LastPaidDate.ToShortDateString()
