--- a/HR_Project/HR_Project.Presentation/Views/Personnel/Create.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Personnel/Create.cshtml
@@ -1,21 +1,27 @@
-﻿@using HR_Project.Application.IoC.Models.DTOs;
-@using HR_Project.Common.Extensions;
-@using HR_Project.Common.Models.DTOs;
+﻿@using HR_Project.Common.Extensions;
 @using HR_Project.Domain.Enum;
-@model UpdateProfileDTO
+@model HR_Project.Common.Models.DTOs.UpdateProfileDTO
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_GeneralLayout.cshtml";
 }
 
-<form asp-action="Update">
+<h1>
+    Personel Oluştur
+</h1>
+
+<hr />
+<form asp-action="Create">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input asp-for="Id" type="hidden" />
+
     <div class="container rounded bg-white mt-3 mb-5 ">
         <div class="row">
             <div class="col-md-3 border-right">
-                <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="@Model.ImagePath"><span class="font-weight-bold">@Model.Name</span><span class="text-black-50">@Model.Email</span><span> </span></div>
+                <div class="d-flex flex-column align-items-center text-center p-3 py-5">
+                    <input asp-for="UploadImage" type="file" class="form-control form-control-user" accept="image/*" />
+                    <span asp-validation-for="UploadImage" class="text-danger"></span><span class="text-black-50">@Model.Email</span><span> </span>
+                </div>
             </div>
 
             <div class="col-md-5 border-right">
@@ -25,16 +31,16 @@
                     </div>
 
                     <div class="row mt-2">
-                        <input type="hidden" asp-for="Name">
+                      
                         <div class="col-md-6">
                             <label class="labels">Adı</label>
-                            <input type="text" class="form-control" disabled="disabled" placeholder="adı" asp-for="Name">
+                            <input type="text" class="form-control"  placeholder="adı" asp-for="Name">
                             <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
-                        <input type="hidden" asp-for="Surname">
+                        
                         <div class="col-md-6">
                             <label class="labels">Soyadı</label>
-                            <input type="text" class="form-control" disabled="disabled" placeholder="soyadı" asp-for="Surname">
+                            <input type="text" class="form-control" placeholder="soyadı" asp-for="Surname">
                             <span asp-validation-for="Surname" class="text-danger"></span>
                         </div>
 
@@ -70,14 +76,14 @@
                         </div>
                         <div class="col-md-12">
                             <label class="labels">Uyruk</label>
-                                <select class="form-control" disabled="disabled" asp-for="Nation" asp-items="EnumHelper.GetEnumSelectList<Nation>()">
+                            <select class="form-control"  asp-for="Nation" asp-items="EnumHelper.GetEnumSelectList<Nation>()">
                                 <option value="-1">Uyruk Giriniz</option>
-                                </select>
-                                <span asp-validation-for="Nation" class="text-danger"></span>
+                            </select>
+                            <span asp-validation-for="Nation" class="text-danger"></span>
                         </div>
                         <div class="col-md-12">
                             <label class="labels">Doğum Tarihi</label>
-                            <input type="date" class="form-control" placeholder="Doğum tarihi giriniz" asp-for="BirthDate" disabled="disabled">
+                            <input type="date" class="form-control" placeholder="Doğum tarihi giriniz" asp-for="BirthDate" >
                             <span asp-validation-for="BirthDate" class="text-danger"></span>
 
                         </div>
@@ -87,7 +93,7 @@
 
                             @if (Model.BloodType != null)
                             {
-                                <select class="form-control" disabled="disabled" asp-for="BloodType" asp-items="EnumHelper.GetEnumSelectList<BloodType>()">
+                                <select class="form-control" asp-for="BloodType" asp-items="EnumHelper.GetEnumSelectList<BloodType>()">
                                     <option value="-1">Kan Grubunuzu Giriniz</option>
                                 </select>
                                 <span asp-validation-for="BloodType" class="text-danger"></span>
@@ -99,29 +105,12 @@
                                 </select>
                                 <span asp-validation-for="BloodType" class="text-danger"></span>
                             }
-                            
+
 
                         </div>
 
                     </div>
-                    <input type="hidden" asp-for="HireDate">
-                    <input type="hidden" asp-for="Title">
-                    <input type="hidden" asp-for="Email">
-                    <input type="hidden" asp-for="BloodType">
-                    <input type="hidden" asp-for="DepartmentName">
-                    <input type="hidden" asp-for="ManagerName">
-                    <input type="hidden" asp-for="CompanyName">
-                    <input type="hidden" asp-for="ImagePath">
-                    <input type="hidden" asp-for="CompanyId">
-                    <input type="hidden" asp-for="ManagerId">
-                    <input type="hidden" asp-for="DepartmentId">
-                    <input type="hidden" asp-for="Nation">
-                    <input type="hidden" asp-for="Gender">
-                    <input type="hidden" asp-for="BirthDate">
-                    
 
-
-                   
                 </div>
             </div>
             <div class="col-md-4">
@@ -131,49 +120,48 @@
 
                     <div class="col-md-12">
                         <label class="labels">Ünvan</label>
-                        <input type="text" class="form-control" disabled="disabled" placeholder="Ünvan giriniz" asp-for="Title">
+                        <input type="text" class="form-control" placeholder="Ünvan giriniz" asp-for="Title">
                         <span asp-validation-for="Title" class="text-danger"></span>
 
                     </div>
 
                     <div class="col-md-12">
                         <label class="labels">Email</label>
-                        <input type="text" class="form-control" disabled ="disabled" placeholder="Email giriniz" asp-for="Email">
+                        <input type="text" class="form-control" placeholder="Email giriniz" asp-for="Email">
                         <span asp-validation-for="Email" class="text-danger"></span>
 
-                        </div>
+                    </div>
                     <div class="col-md-12">
                         <label class="labels">İşe Giriş Tarihi</label>
-                        <input type="date"  class="form-control" disabled="disabled" placeholder="" asp-for="HireDate">
+                        <input type="date" class="form-control" placeholder="" asp-for="HireDate">
                         <span asp-validation-for="HireDate" class="text-danger"></span>
 
                     </div>
                     <div class="col-md-12">
                         <label class="labels">Yöneticisi</label>
-                        <input type="text" disabled="disabled" class="form-control"  asp-for="ManagerName">
+                        <input type="text"  class="form-control" asp-for="ManagerName">
                         <span asp-validation-for="ManagerName" class="text-danger"></span>
 
                     </div>
                     <div class="col-md-12">
                         <label class="labels">Şirketi</label>
-                        <input type="text" disabled="disabled" class="form-control"  asp-for="CompanyName">
+                        <input type="text" class="form-control" asp-for="CompanyName">
                         <span asp-validation-for="CompanyName" class="text-danger"></span>
 
                     </div>
                     <div class="col-md-12">
                         <label class="labels">Departmanı</label>
-                        <input type="text" disabled="disabled" class="form-control"  asp-for="DepartmentName">
+                        <input type="text"  class="form-control" asp-for="DepartmentName">
                         <span asp-validation-for="DepartmentName" class="text-danger"></span>
 
                     </div>
 
-                    
                 </div>
             </div>
-         
+
         </div>
         <div class="mt-5 text-center">
-            <input type="submit" asp-action="Update" asp-controller="Personnel" value="Kaydet" class="btn btn-primary profile-button" />
+            <input type="submit" asp-action="Create" asp-controller="Personnel" value="Kaydet" class="btn btn-primary profile-button" />
         </div>
     </div>
 </form>
