--- a/HR_Project/HR_Project.Presentation/Views/_ViewImports.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using HR_Project.Presentation
 @using HR_Project.Presentation.Models
+@using HR_Project.Common.Models.VMs;
+@using HR_Project.Common.Extensions;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
